--- a/css.css
+++ b/css.css
@@ -1,5 +1,6 @@
 .embed-container{position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%}
 .embed-container embed,.embed-container iframe,.embed-container object{position:absolute;top:0;left:0;width:100%;height:100%}
-.gdpr {}
-.gdpr p {}
-.gdpr p.accept {}
+.gdpr {display:table;width:100%;border-radius: 8px;margin:1em 0;background-color:#ffc;}
+.gdpr p {color:#000;font-size:1.25em;padding:.7em;margin:0 0 1em 0}
+.gdpr p a {color:#ba0000}
+.gdpr p.accept a {padding:.3em .5em;background-color:#ba0000;color:#fff !important;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;}
