--- a/css.css
+++ b/css.css
@@ -18,7 +18,7 @@
   -moz-border-radius:8px;
   -webkit-border-radius:8px;
   border-radius: 8px;
-  margin:1em 0;
+  margin:0 0 1em 0;
   background-color:#ffc;
 }
 .gdpr p {
