--- a/css.css
+++ b/css.css
@@ -5,7 +5,7 @@
   overflow:hidden;
   max-width:100%;
 }
-.embed-container embed,.embed-container iframe,.embed-container object, .embed-container video {
+.embed-container embed,.embed-container iframe,.embed-container object {
   position:absolute;
   top:0;
   left:0;
