--- a/css.css
+++ b/css.css
@@ -1,3 +1,4 @@
+/* Start of txp-media shortcode styles */
 .embed-container{
   position:relative;
   padding-bottom:56.25%;
@@ -73,3 +74,4 @@ video {
   clear:both;
   margin: 1em 0;
 }
+/* End of txp-media shortcode styles */
