--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 /* Start of txp-media shortcode styles */
-/* Make iframe embeds responsive */
+/* Make embeded content responsive */
 .embed-container{
   position:relative;
   padding-bottom:56.25%;
