--- a/gdpr.css
+++ b/gdpr.css
@@ -26,6 +26,7 @@
   border-radius: 8px;
   margin:0 0 1em 0;
   background-color:#ffc;
+  margin: 1em 0 0 0;
 }
 .gdpr p {
   color:#000;
@@ -59,6 +60,9 @@
   margin:1em;
   padding:.5em 1em;
   border: 2px solid #ba0000;
+  -moz-border-radius:8px;
+  -webkit-border-radius:8px;
+  border-radius:8px;
 }
 /* basic responsive styles for html5 video and audio tags */
 audio {
